landingpage and minot fixes

--- a/templates/page.login.html
+++ b/templates/page.login.html
@@ -18,19 +18,30 @@
 	
 	<header>
 		<a  href="#" class="lunch-logo">
-			<img src="../static/img/logo.png" alt="">
+			<img src="../static/img/logo-lp.png" alt="">
 		</a>
 	</header>
 	<form action="/login" method="post" class="lunch-login-form">
 		
-		<label for="username" class="lunch-inp-label"></label>
+		<label for="username" class="lunch-inp-label">Username</label>
 		<input type="text" name="username" class="lunch-inp-username">
 
-		<label for="password" class="lunch-inp-label"></label>
+		<label for="password" class="lunch-inp-label">Password</label>
 		<input type="password" name="password" class="lunch-inp-password">
 		
 		<button type="submit" class="lunch-fn-login">Login</button>
 	</form>
+
+
+	<footer class="lunch-footer">
+		<nav>
+			<ul>
+				<li><a href="http://www.19h13.com" title="19:13 Werbeagentur">19:13 Command Center</a></li>
+				<li><a href="/manifesto" title="Manifesto">Lunch Manifesto</a></li>
+				<li><a href="https://github.com/marcorei/lunchpad" title="Manifesto">Source Code</a></li>
+			</ul>
+		</nav>
+	</footer>
 
 	</body>
 </html>
