--- a/dev/sass/_page.login.scss
+++ b/dev/sass/_page.login.scss
@@ -2,35 +2,180 @@
  * Loginpage
  */
 
- .lunch-page-login {
+ *{
+ 	outline: none;
+ }
+
+.lunch-page-login {
  	height: 100%;
  	background-color: $agencycolor;
+
+ 	.lunch-footer {
+ 		ul{
+ 			margin: 0;
+ 			padding: 0;
+ 		}
+ 		li{
+ 			list-style: none;
+ 			display: inline;
+ 			padding:{
+ 				left: 15px;
+ 				right: 15px;
+ 			}
+ 		}
+ 		a{
+ 			text-decoration: none;
+ 			color: #fff;
+
+ 			font: {
+				family: Georgia;
+				style: regular;
+				weight: normal;
+				size: 16px;
+			}
+ 		}
+
+
+ 		position: absolute;
+ 		bottom: 40px;
+ 		width: 100%;
+ 		text-align: center;
+ 	}
+ 	
  }
 
 .lunch-logo {
+	padding-top: 40px;
 	display: block;
 	text-align: center;
+	height: 480px;
+	overflow: hidden;
 }
 
 .lunch-login-form {
-	margin: 200px auto;
-	max-width: 500px;
-	padding: 50px;
-	background-color: #fff;
+	margin: 0px auto;
+	width: 250px;
+	//padding: 50px;
+	//background-color: #fff;
 
 
 	.lunch-inp-username,
 	.lunch-inp-password {
+
+		box-sizing: border-box;
+		width: 100%;
+
 		margin: {
 			bottom: 10px;
 		}
 		padding: 10px;
+
+		
+
 		display: block;
-		background-color: white;
+		//background-color: white;
+		background: none;
 		border: {
 			width: 1px;
 			style: solid;
-			color: #ccc;
+			color: $agencycolor;
 		}
+
+		color: #000;
+
+
+		&:focus{
+			outline: none;
+
+			//border-color: #ccc;
+			background-color: #fff;
+		}
+
+		background-color: #e0003e;
+
+
+
+		border-radius: 5px;
+
+	}
+
+	input{
+		font: {
+			family: Georgia;
+			style: regular;
+			weight: normal;
+			size: 16px;
+		}
+		text-align: center;
+	}
+
+
+	.lunch-fn-login {
+
+		border: 0;
+		
+		display: block;
+
+		//float: left;
+
+		//margin-right: 10px;
+
+		text-align: right;
+		
+		padding: 10px 20px;
+		//width: 150px;
+
+		text-decoration: none;
+		
+		font: {
+			family: Georgia;
+			//style: italic;
+			//weight: bold;
+		}
+
+		color: white;
+		background: {
+			color: #000;
+		}
+
+		//float: none;
+		width: 70px;
+		height: 70px;
+		//margin: {
+		//	left: 20px;
+		//	right: 0px;
+		//	top: 12px;
+		//}
+		text-align: center;
+		padding: 22px 7px;
+		border-radius: 36px;
+		text-decoration: none;
+		font-family: Georgia;
+
+		//color: $agencycolor;
+		color: #fff;
+
+		margin: auto;
+		margin-top: 30px;
+
+	}
+
+	.lunch-inp-label{
+
+		color: #fff;
+
+		font: {
+			family: Arial;
+			size: 12px;
+		}
+
+		text-transform: uppercase;
+
+		text-align: center;
+		display: block;
+		margin-bottom: 8px;
+
+		//display: none;
+
 	}
 }
