--- a/templates/page.app.html
+++ b/templates/page.app.html
@@ -301,6 +301,7 @@
 	}
 
 
+
 	// Create New Venue
 
 	var addVenue = function() {
@@ -315,19 +316,13 @@
 	}
 
 
-	// Listens to change of checkbox
-/*
-	$('input[type=checkbox]').on( 'change', ( function(){
-        if (this.checked) {
-            changeNotify(true);
-            console.log('meow');
-        } else {
-        	changeNotify(false);
-        	console.log('fart');
-        }
-    });
 
-*/
+
+	// Visit Venue
+
+	var visitVenue = function() {
+		// /post/visit
+	}
 
 
 	/* Test the Timer */
