manifesto und app.js bugfixes

--- a/dev/sass/_page.manifesto.scss
+++ b/dev/sass/_page.manifesto.scss
@@ -4,6 +4,45 @@
 
 
 .lunch-page-manifesto {
+
+	margin: 0;
  	
+ 	background-image: url('/static/img/manifesto-bg.jpg');
+ 	background-position: center center;
+ 	background-size: cover;
+ 	background-attachment: fixed;
+
+ 	p{
+ 		margin: 0;
+
+ 		font: {
+			family: "bebas-neue";
+			size: 3em;
+		}
+
+		color: #fff;
+
+		text-align:center;
+
+		line-height: 1em;
+
+		padding-top: 30px;
+
+		&:first-child{
+			padding-top: 150px;
+		}
+ 	}
+
+ 	a{
+ 		text-decoration: none;
+ 		color: $agencycolor;
+ 	}
+
+
+ 	.lunch-footer{
+ 		a{
+ 			color: #fff;
+ 		}
+ 	}
  	
  }
