--- a/templates/page.manifesto.html
+++ b/templates/page.manifesto.html
@@ -30,8 +30,9 @@
 		<footer class="lunch-footer">
 			<nav>
 				<ul>
+					<li><a href="/" title="Manifesto">Home</a></li>
 					<li><a href="http://www.19h13.com" title="19:13 Werbeagentur">19:13 Command Center</a></li>
-					<li><a href="/manifesto" title="Manifesto">Lunch Manifesto</a></li>
+					
 					<li><a href="https://github.com/marcorei/lunchpad" title="Manifesto">Source Code</a></li>
 				</ul>
 			</nav>
