--- a/templates/page.login.html
+++ b/templates/page.login.html
@@ -38,7 +38,7 @@
 			<ul>
 				<li><a href="http://www.19h13.com" title="19:13 Werbeagentur">19:13 Command Center</a></li>
 				<li><a href="/manifesto" title="Manifesto">Lunch Manifesto</a></li>
-				<li><a href="https://github.com/marcorei/lunchpad" title="Manifesto">Source Code</a></li>
+				<li><a href="https://github.com/marcorei/lunchpad" title="Manifesto">Source auf Github</a></li>
 				<li>by <a href="https://twitter.com/marcorei" title="marcorei auf twitter">@marcorei</a> &amp; <a href="https://twitter.com/joggaf" title="joggaf auf twitter">@joggaf</a></li>
 			</ul>
 		</nav>
