--- a/dev/sass/_page.app.scss
+++ b/dev/sass/_page.app.scss
@@ -36,6 +36,22 @@
 
 	}
 
+	.lunch-fn-notify,
+	.lunch-fn-logout {
+		cursor: pointer;
+
+		.lunch-inp-notify {
+			cursor: pointer;
+		}
+		label {
+			cursor: pointer;
+		}
+
+		&:hover {
+			text-decoration: underline;
+		}
+	}
+
 }
 
 
@@ -72,7 +88,7 @@
 
 			display: block;
 
-			//text-align: center;
+			text-align: right;
 
 
 			border: {
@@ -84,7 +100,7 @@
 		}
 
 		.lunch-logo {
-
+			text-align: right;
 			display: block;
 			height: 122px;
 			width: 260px;
@@ -217,6 +233,10 @@
 
 
 
+.lunch-venue-create-container{
+	margin-left: 38.2%;
+	width: 61.8%;
+}
 
 
 
@@ -318,6 +338,10 @@
 	.lunch-fn-attend {
 		background: {
 			color: $agencycolor;
+		}
+
+		&:hover {
+			background-color: #CE0038;
 		}
 	}
 
@@ -438,6 +462,12 @@
 	border-radius: 34px;
 	text-decoration: none;
 	font-family: Georgia;
+
+	&:hover{
+		background: {
+			color: #0096BB;
+		}
+	}
 }
 
 
@@ -600,6 +630,10 @@
 .lunch-fn-addvenue {
 	background: {
 		color: #98D300;
+	}
+
+	&:hover {
+		background-color: #79A800;
 	}
 }
 
