--- a/dev/sass/_page.login.scss
+++ b/dev/sass/_page.login.scss
@@ -128,6 +128,13 @@
 		margin: auto;
 		margin-top: 30px;
 
+		@include transition( background-color 1 );
+
+		&:hover{
+			background-color: #111;
+			@include transition( background-color 0.2 );
+		}
+
 	}
 
 	.lunch-inp-label{
