--- a/dev/sass/screen.scss
+++ b/dev/sass/screen.scss
@@ -5,7 +5,8 @@
 
 
 // External Code
-
+@import "compass/css3/transform";
+@import "compass/css3/transition";
 @import "vendor.normalize";
 @import "vendor.clearfix";
 
