--- a/templates/page.manifesto.html
+++ b/templates/page.manifesto.html
@@ -20,7 +20,7 @@
 	</head>
 	<body class="lunch-page-manifesto">
 	
-		<p>Wir sind ein gutes Steak.<br>Und die Semmel vom Metzger</p>
+		<p>Wir sind ein gutes Steak.<br>Und die Semmel vom Metzger.</p>
 		<p>Wir sind Mittagstisch in großer Runde.<br>Und Spalter mit kleinem Budget.</p>
 		<p>Wir sind Kreation und Beratung.</p>
 		<p>Wir sind ein Team.</p>
