hotfix blank target

--- a/templates/page.app.html
+++ b/templates/page.app.html
@@ -424,7 +424,7 @@
 		<h2 class="lunch-venue-title"></h2>
 
 		<div class="lunch-venue-header">
-			<a href="" class="lunch-fn-menu">View Menu</a>
+			<a href="" class="lunch-fn-menu" target="blank">View Menu</a>
 		</div>
 
 		<div class="lunch-venue-guests-container">
