--- a/templates/page.login.html
+++ b/templates/page.login.html
@@ -11,7 +11,8 @@
 		<meta name="viewport" content="width=device-width">
 
 		<link rel="stylesheet" href="../static/css/screen.css">
-
+		<link rel="icon" href="../static/img/favicon.ico" type="image/x-icon"/>
+		
 		<script src="../static/js/vendor/modernizr-2.6.2.min.js"></script>
 	</head>
 	<body class="lunch-page-login">
