--- a/templates/page.app.html
+++ b/templates/page.app.html
@@ -11,6 +11,7 @@
 		<meta name="viewport" content="width=device-width">
 
 		<link rel="stylesheet" href="../static/css/screen.css">
+		<link rel="icon" href="../static/img/favicon.ico" type="image/x-icon"/>
 
 		<script src="../static/js/vendor/modernizr-2.6.2.min.js"></script>
 		<script src="../static/js/vendor/jquery.js"></script>
