--- a/dev/sass/screen.scss
+++ b/dev/sass/screen.scss
@@ -7,6 +7,7 @@
 // External Code
 @import "compass/css3/transform";
 @import "compass/css3/transition";
+@import "compass/css3/box-sizing";
 
 @import "vendor.normalize";
 @import "vendor.clearfix";
@@ -17,9 +18,13 @@
 @import "typo";
 
 
+// UI Elements
+@import "ui.header";
+
+// Templates
+@import "template.venue";
 
 // Pages
-
 @import "page.app";
 @import "page.login";
 @import "page.manifesto";
