improves responisveness of venues

--- a/dev/sass/_page.app.scss
+++ b/dev/sass/_page.app.scss
@@ -382,16 +382,7 @@
 
 
 
-// Lunch Venue Guests
 
-
-.lunch-venue-guests-container,
-.lunch-void-guests-container {
-	
-	margin-top: 20px;
-
-	margin-right: 100px;
-}
 
 
 
@@ -410,7 +401,7 @@
 }
 
 
-
+/*
 .lunch-fn-attend, .lunch-fn-quit {
 	
 
@@ -559,7 +550,7 @@
 		@include transition( all 200ms );
 	}
 }
-
+*/
 
 
 
